--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     Welcome
   </h1>
   <app-heroes></app-heroes>
+  <app-messages></app-messages>
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
