--- a/src/app/heros/heros.component.html
+++ b/src/app/heros/heros.component.html
@@ -1,13 +1,16 @@
-<h1>
-    {{hero.name | uppercase}}
-  </h1>
-  <div>
-      <label>name:
-        <input [(ngModel)]="hero.name" placeholder="name"/>
-      </label>
-    </div>
+
+
 <p>
   {{hero.id}}
 </p>
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
+
+<app-hero-detail [selectedHero]="selectedHero"></app-hero-detail>
+
 
 
