--- a/src/app/heros/heros.component.html
+++ b/src/app/heros/heros.component.html
@@ -1,16 +1,20 @@
-
-
-<p>
-  {{hero.id}}
-</p>
 <h2>My Heroes</h2>
+<div>
+  <label>Hero name:
+    <input #heroName />
+  </label>
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button (click)="add(heroName.value); heroName.value=''">
+    add
+  </button>
+</div>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+      <button class="delete" title='delete hero' (click)="deleteHero(hero)">
+        delete
+      </button>
+    </a>
   </li>
 </ul>
-
-<app-hero-detail [selectedHero]="selectedHero"></app-hero-detail>
-
-
-
